RESOLVED FIXED213890
REGRESSION: Comments section at dpreview has overlapping names with comment on phone
https://bugs.webkit.org/show_bug.cgi?id=213890
Summary REGRESSION: Comments section at dpreview has overlapping names with comment o...
Antti Koivisto
Reported 2020-07-02 10:42:43 PDT
Text autosizing bug
Attachments
patch (3.78 KB, patch)
2020-07-02 10:46 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2020-07-02 10:43:16 PDT
Antti Koivisto
Comment 2 2020-07-02 10:46:38 PDT
EWS
Comment 3 2020-07-02 11:56:27 PDT
Committed r263853: <https://trac.webkit.org/changeset/263853> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403376 [details].
Note You need to log in before you can comment on or make changes to this bug.