REGRESSION: Comments section at dpreview has overlapping names with comment on phone https://bugs.webkit.org/show_bug.cgi?id=213890 Source/WebCore:

<rdar://problem/64693599>

Reviewed by Simon Fraser.

Test: fast/text-autosizing/ios/float-miscomputed-line-height.html

* rendering/TextAutoSizing.cpp:
(WebCore::TextAutoSizingValue::adjustTextNodeSizes):

Negative value is used to indicate unset line-height. We shouldn't make adjustments in this case.
This matches Style::BuilderCustom code.

LayoutTests:

Reviewed by Simon Fraser.

* fast/text-autosizing/ios/float-miscomputed-line-height-expected.html: Added.
* fast/text-autosizing/ios/float-miscomputed-line-height.html: Added.


Canonical link: https://commits.webkit.org/226694@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263853 268f45cc-cd09-0410-ab3c-d52691b4dbfc